--- a/index.html
+++ b/index.html
@@ -2,22 +2,40 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LocalStorage demo</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       padding: 20px;
+      font-size: 18px;
+      line-height: 1.4;
+    }
+    h1 {
+      font-size: 22px;
+      margin-bottom: 20px;
     }
     button {
-      margin: 5px;
-      padding: 10px 15px;
-      font-size: 14px;
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 15px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: none;
+      background-color: #007aff;
+      color: white;
+    }
+    button:active {
+      background-color: #005bb5;
     }
     #output {
       margin-top: 20px;
-      padding: 10px;
+      padding: 15px;
       border: 1px solid #ccc;
-      min-height: 30px;
+      border-radius: 8px;
+      font-size: 18px;
+      min-height: 40px;
     }
   </style>
 </head>
